---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-04-08 Stephane Letz  <letz@grame.fr>

	* Native MIDI backend (JackCoreMidiDriver, JackWinMMEDriver) in progress.

2009-04-03 Stephane Letz  <letz@grame.fr>

	* Simplify JackClient RT code, jack_thread_wait API marked deprecated."

2009-03-29 Stephane Letz  <letz@grame.fr>

	* Cleanup JackInternalClient code.

2009-03-27 Stephane Letz  <letz@grame.fr>

	* Add a buffer size callback for netmaster that just remove the client (it will be recreated with the new parameters).

2009-03-26 Stephane Letz  <letz@grame.fr>

	* First working JackBoomerDriver two threads version.

2009-03-24 Stephane Letz  <letz@grame.fr>

	* New JackBoomerDriver class for Boomer driver on Solaris.
	* Add mixed 32/64 bits mode (off by default).

2009-03-23 Stephane Letz  <letz@grame.fr>

	* Version 1.9.3 started.

2009-03-19 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann optimization patch (inlining some heavy used methods).

2009-03-12 Stephane Letz  <letz@grame.fr>

        * Virtualize and allow overriding of thread creation function, to allow Wine support (from JACK1).

2009-03-12 Stephane Letz  <letz@grame.fr>

        * Try automatic adaptative mode in adapters.

2009-03-11 Stephane Letz  <letz@grame.fr>

        * Client incorrect re-naming fixed : now done at socket level also.

2009-03-10 Stephane Letz  <letz@grame.fr>

	* Add -g (ring-buffer) parameter to netadapter.
	* Automatic adaptative ringbuffer size mode when -g = 0.

2009-03-09 Stephane Letz  <letz@grame.fr>

	* Use Torben Hohn PI controler code for adapters (in progress).

2009-03-05 Stephane Letz  <letz@grame.fr>
